[gd_scene load_steps=53 format=3 uid="uid://btvoux1cecvpd"]

[ext_resource type="Texture2D" uid="uid://be0m5ko5qai4r" path="res://Characters/opponent/Turret-Drones/drone idle(phase 1).png" id="1_qd5co"]
[ext_resource type="Script" path="res://scripts/flying_drone.gd" id="1_qm0uj"]
[ext_resource type="Texture2D" uid="uid://cl5oni30dmidc" path="res://Characters/opponent/Turret-Drones/drone (phase 1 to phase 2).png" id="3_80376"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vvo5u"]
atlas = ExtResource("1_qd5co")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rkw6"]
atlas = ExtResource("1_qd5co")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7y60"]
atlas = ExtResource("1_qd5co")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5semx"]
atlas = ExtResource("1_qd5co")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpdvd"]
atlas = ExtResource("3_80376")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_55wr8"]
atlas = ExtResource("3_80376")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_61xu0"]
atlas = ExtResource("3_80376")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkdq0"]
atlas = ExtResource("3_80376")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c5o5"]
atlas = ExtResource("3_80376")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioev2"]
atlas = ExtResource("3_80376")
region = Rect2(250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qevff"]
atlas = ExtResource("3_80376")
region = Rect2(300, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdq6f"]
atlas = ExtResource("3_80376")
region = Rect2(350, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1a78"]
atlas = ExtResource("3_80376")
region = Rect2(400, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyoih"]
atlas = ExtResource("3_80376")
region = Rect2(450, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wv4v"]
atlas = ExtResource("3_80376")
region = Rect2(500, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2myyc"]
atlas = ExtResource("3_80376")
region = Rect2(550, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt6n7"]
atlas = ExtResource("3_80376")
region = Rect2(600, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq2wm"]
atlas = ExtResource("3_80376")
region = Rect2(650, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilswm"]
atlas = ExtResource("3_80376")
region = Rect2(700, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_euajl"]
atlas = ExtResource("3_80376")
region = Rect2(750, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_s653l"]
atlas = ExtResource("3_80376")
region = Rect2(800, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y0is"]
atlas = ExtResource("3_80376")
region = Rect2(850, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftey6"]
atlas = ExtResource("3_80376")
region = Rect2(900, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ohxu"]
atlas = ExtResource("3_80376")
region = Rect2(950, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_h662c"]
atlas = ExtResource("3_80376")
region = Rect2(1000, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hludo"]
atlas = ExtResource("3_80376")
region = Rect2(1050, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujidu"]
atlas = ExtResource("3_80376")
region = Rect2(1100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1gqh"]
atlas = ExtResource("3_80376")
region = Rect2(1150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhtn8"]
atlas = ExtResource("3_80376")
region = Rect2(1200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqur3"]
atlas = ExtResource("3_80376")
region = Rect2(1250, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmyat"]
atlas = ExtResource("3_80376")
region = Rect2(1300, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_57gg8"]
atlas = ExtResource("3_80376")
region = Rect2(1350, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sryhe"]
atlas = ExtResource("3_80376")
region = Rect2(1400, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4vg3"]
atlas = ExtResource("3_80376")
region = Rect2(1450, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnygb"]
atlas = ExtResource("3_80376")
region = Rect2(1500, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxh8r"]
atlas = ExtResource("3_80376")
region = Rect2(1550, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8phah"]
atlas = ExtResource("3_80376")
region = Rect2(1600, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o7hc"]
atlas = ExtResource("3_80376")
region = Rect2(1650, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xvxy"]
atlas = ExtResource("3_80376")
region = Rect2(1700, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbj12"]
atlas = ExtResource("3_80376")
region = Rect2(1750, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2bg2"]
atlas = ExtResource("3_80376")
region = Rect2(1800, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymog2"]
atlas = ExtResource("3_80376")
region = Rect2(1850, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfcg0"]
atlas = ExtResource("3_80376")
region = Rect2(1900, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_efgnu"]
atlas = ExtResource("3_80376")
region = Rect2(1950, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2a6a"]
atlas = ExtResource("3_80376")
region = Rect2(2000, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y2pm"]
atlas = ExtResource("3_80376")
region = Rect2(2050, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_2bafh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvo5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rkw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7y60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5semx")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpdvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55wr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61xu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkdq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c5o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioev2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qevff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdq6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1a78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyoih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wv4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2myyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq2wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilswm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euajl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s653l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y0is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftey6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ohxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h662c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hludo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujidu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1gqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhtn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqur3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmyat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57gg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sryhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4vg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnygb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxh8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8phah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o7hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xvxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbj12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2bg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymog2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfcg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efgnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2a6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y2pm")
}],
"loop": false,
"name": &"turret_mode",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_876r8"]
size = Vector2(20, 10.4651)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjoda"]
size = Vector2(20, 20.3488)

[node name="flying_drone" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_qm0uj")

[node name="RayCastleft" type="RayCast2D" parent="."]
position = Vector2(-1, -7)
target_position = Vector2(-38, 0)
collision_mask = 2

[node name="RayCastright" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(40, 1)
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2bafh")
animation = &"turret_mode"
autoplay = "idle"
frame = 41
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(1, 1.72)
shape = SubResource("RectangleShape2D_876r8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
scale = Vector2(1, 1.72)
shape = SubResource("RectangleShape2D_mjoda")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.535
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
